# ros-semantic-segmentation

./: CMakeLists.txt  README.md  package.xml
road_segmentation/: package.xml
road_segmentation/nodes/: cv_bridge.py  road_segmentation_node
road_segmentation/nodes/models/espnetv2_bdd100k_driveable/: __init__.py  weights.pth
road_segmentation/nodes/models/espnetv2_bdd100k_driveable/cnn/: Model.py
road_segmentation/nodes/models/mnv2_bdd100k_driveable_513/: __init__.py
semantic_segmentation/: CMakeLists.txt  package.xml
semantic_segmentation/nodes/: cv_resize.py  road_segmentation_node  test_resize.py
semantic_segmentation/nodes/models/espnetv2_bdd100k_driveable/: categories.json  weights.pth
semantic_segmentation/nodes/models/espnetv2_bdd100k_driveable/cnn/: SegmentationModel.py
semantic_segmentation/nodes/models/mnv2_bdd100k_driveable_513/: __init__.py  notes.txt
semantic_segmentation/nodes/models/mnv2_coco2017_driving_513/: categories.json
semantic_segmentation/nodes/models/mnv2_dm05_coco_voc_trainaug/: categories.json
semantic_segmentation/nodes/models/mnv2_dm05_voc/: __init__.py  graph.pb
